Use newer js version and fix some layout issues

--- a/Source/TurnTracker.Client/src/app/auth/profile/profile.component.scss
+++ b/Source/TurnTracker.Client/src/app/auth/profile/profile.component.scss
@@ -57,7 +57,3 @@ mat-card-header.padded {
 mat-list-item.accent.device * {
   color: inherit;
 }
-
-mat-list-item:not(:first-of-type) {
-  margin-top:  1em;
-}
